<resources>
    <string name="app_name" translatable="false">ChronoBar</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="configure" translatable="false">Configure</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="app_widget_description" translatable="false">This is an app widget description</string>
    <string name="year">"Year "</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="yearBar">Barra de año</string>
    <string name="monthBar">Month Bar</string>
    <string name="weekBar">Week Bar</string>
    <string name="dayBar">Day Bar</string>
    <string name="addCustomDate">Add custom date</string>
</resources>