<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_widget_background"
        android:gravity="center|left"
        android:orientation="vertical"
        android:padding="0dp">

        <!-- Barra de progreso -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:visibility="visible">

            <ProgressBar
                android:id="@+id/yearBar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:gravity="center|left"
                android:max="100"
                android:progress="50"
                android:progressDrawable="@drawable/plain_bar" />

            <TextView
                android:id="@+id/textYear"
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/year"
                android:textColor="#000000" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp">

            <ProgressBar
                android:id="@+id/monthBar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:gravity="center|left"
                android:max="100"
                android:progress="50"
                android:progressDrawable="@drawable/plain_bar" />

            <TextView
                android:id="@+id/textMonth"
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/month"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:visibility="visible">

            <ProgressBar
                android:id="@+id/weekBar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:gravity="center|left"
                android:max="100"
                android:progress="50"
                android:progressDrawable="@drawable/plain_bar" />

            <TextView
                android:id="@+id/textWeek"
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/week"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp">

            <ProgressBar
                android:id="@+id/dayBar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:gravity="center|left"
                android:max="100"
                android:progress="50"
                android:progressDrawable="@drawable/plain_bar" />

            <TextView
                android:id="@+id/textDay"
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/day"
                android:textColor="#000000" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
